--- a/app/views/home/page11.html.erb
+++ b/app/views/home/page11.html.erb
@@ -10,9 +10,9 @@
 
             <div class="profile-left">
 
-                <div class="profile-img">
+                <div class="profile-img portrait">
 
-                    <%= image_tag('avatar.jpg')%>
+                    <%= image_tag('ad-chat.jpg')%>
 
                 </div>
                 <div class="col-md-12">
