--- a/app/views/home/page3.html.erb
+++ b/app/views/home/page3.html.erb
@@ -40,6 +40,8 @@
 
 		          <div class="full-detail-short-information">
 
+		          	<div class="full-detail-short-closed">Хаагдсан тохиролцоо. Та санал илгээх боломжгүй</div>
+		          	<div class="hairly-line"></div>
 		          	<div class="full-detail-short-condition"><strong>Төлөв:</strong> Шинэвтэр</div>
 		          	<div class="hairly-line"></div>
 		          	<div class="full-detail-short-wanted"><strong>Хүсэж буй: </strong>
@@ -55,7 +57,7 @@
 		          	<div class="full-detail-short-deals-intro">
 		          		<strong>Ирсэн санал: <br/></strong>
 		          		<div class="full-detail-short-deals-intro-items">
-		          			<a href="#"><%= image_tag('123.jpg')%></a>
+		          			<a class="accepted-bid-item-little" href="#"><%= image_tag('123.jpg')%></a>
 		          			<a href="#"><%= image_tag('123.jpg')%></a>
 		          			<a href="#"><%= image_tag('123.jpg')%></a>
 		          			<a href="#"><%= image_tag('123.jpg')%></a>
@@ -165,7 +167,9 @@
 
 		        		<strong>Ирсэн саналууд: <br/></strong>
 
-		        		<div class="full-detail-bid-item">
+		        		<div class="full-detail-bid-item accepted-bid-item">
+
+		        			<div class="timeline-badget accepted-badget"></div>
 	      						
 	      					<div class="full-detail-bid-item-detail-img">
 	      						<%= image_tag('galaxyS5.jpg')%>
