--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -56,7 +56,7 @@ body{
   z-index: 99999;
 }
 .header-sticked > .header_mid{
-  padding:10px 0 8px 0;
+  padding:10px 0 3px 0;
   transition-duration:0.5s;
   z-index: 99999;
   -webkit-box-shadow: 0px 5px 15px 0px rgba(0,0,0,0.2);
@@ -78,17 +78,19 @@ body{
   font-size: 14px;
   text-align: center;
   margin-top: 2px;
+  height: 42px;
 }
 .logo-right-category .hover{
   padding: 10px 0px;
   cursor: pointer;
 }
-.logo-right-category:hover{
+.logo-right-category .hover:hover{
   background: #fff;
   border-left: 1px solid #dbdbdb;
   border-right: 1px solid #dbdbdb;
   border-top: 2px solid #0081ff;
   margin-top: 0px;
+  padding: 8px 0px 12px 0;
 }
 .header-side-search{
   float: left;
@@ -398,14 +400,17 @@ body{
   height: 77px;
   width: 77px;
   position: absolute;
-  right: -6px;
-  top:-6px;  
+  right: -7px;
+  top:-7px;  
 }
 .special-badget{
   background: image-url('special_badget.png') no-repeat center center;
 }
 .free-badget{
   background: image-url('free-badget-mini.png') no-repeat center center;
+}
+.accepted-badget{
+  background: image-url('accepted.png') no-repeat center center;
 }
 .timeline-deal-item-bids-items{
   box-shadow: none;
@@ -807,6 +812,22 @@ body{
   .full-detail-short-description-intro{
     margin-top: 5px;
     font-size: 12px;
+  }
+  .full-detail-short-description-intro span{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    line-height: 18px;
+  }
+  .full-detaul-bid-item-detail-description{
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    height: 44px;
   }
   .readmore-1{
     font-size: 12px;
@@ -1226,14 +1247,26 @@ background: image-url('arrow_right.png') no-repeat 0 0;
   float: left;
 }
 .profile-img{
-  width: 100%;
-  text-align: center;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  position: relative;
+  width: 230px;
+  height: 230px;
+  margin: 20px auto;
+  border-radius: 50%;
+  overflow: hidden;
 }
 .profile-img img{
-  width: 70%;
-  border-radius: 50%;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  height: 100%;
+  width: auto;
+  -webkit-transform: translate(-50%,-50%);
+      -ms-transform: translate(-50%,-50%);
+          transform: translate(-50%,-50%);
+}
+.profile-img.portrait img{
+  width: 100%;
+  height: auto;
 }
 .profile-name{
   width: 100%;
@@ -1759,6 +1792,10 @@ background: image-url('arrow_right.png') no-repeat 0 0;
   float: left;
   margin-right: 10px;
 }
+.header-profile-logged, .header-profile-notifications{
+  float: left;
+  margin-right: 10px;
+}
 .header-login-social-media img{
   border: none;
   border-radius: 4px;
@@ -1808,4 +1845,173 @@ a.anchor {
   position: relative;
   top: -83px;
   visibility: hidden;
+}
+
+.full-detail-short-deals-intro .timeline-deal-item-bids-items{
+  background: #fff;
+  border: none;
+}
+.full-detail-short-deals-intro .timeline-deal-item-bids-items img{
+  width: 60px;
+  height: 60px;
+}
+.full-detail-short-deals-intro .timeline-deal-item-bids-items .als-next{
+  right: -5px;
+  top: 10px;
+}
+.full-detail-short-deals-intro .timeline-deal-item-bids-items .als-next .timeline-deal-item-bids-right-arrow{
+  width: 20px;
+  height: 60px;
+  margin-right: 0;
+}
+.full-detail-short-deals-intro .timeline-deal-item-bids-items .als-prev{
+  margin-left: -15px;
+}
+.full-detail-short-deals-intro .timeline-deal-item-bids-items .als-prev .timeline-deal-item-bids-right-arrow{
+  width: 20px;
+  height: 60px;
+  margin-right: 0;
+}
+.full-detail-short-deals-intro .timeline-deal-item-bids-items .als-viewport{
+  margin-left: 5px;
+}
+.full-detail-short-closed{
+  color: red;
+  font-size: 14px;
+}
+.accepted-bid-item{
+  border-color:#04bb00;
+  position: relative;
+}
+.accepted-bid-item-little img{
+  border-color:#04bb00;
+}
+.header-notification{
+  float: left;
+  background: #eee;
+  border-radius: 4px;
+  height: 34px;
+  width:34px;
+  margin-left: 5px;
+  text-align: center;
+  vertical-align: middle;
+  position: relative;
+}
+.header-notification:hover{
+  background: #ddd;
+}
+.notification-active{
+  background: #0081ff;
+}
+.notification-active:hover{
+  background: #006fdb;
+}
+.header-notification span{
+  color: #fff;
+  margin-top: 5px;
+}
+.header-notification .glyphicon-ok-circle{
+  font-size: 22px;
+}
+.header-notification .glyphicon-envelope{
+  font-size: 18px;
+  margin-top: 7px;
+}
+.header-notification .glyphicon-list{
+  font-size: 18px;
+  margin-top: 7px;
+}
+.header-notification-number{
+  position: absolute;
+  color: #fff;
+  bottom: -2px;
+  right: -2px;
+  font-size: 11px;
+  background: #ee0000;
+  padding:0 4px;
+  border-radius:4px;
+  z-index: 9;
+}
+.header-profile-notifications{
+  position: relative;
+}
+.notification-dropdown-container{
+  background: #fff;
+  border:1px solid #006fdb;
+  position: absolute;
+  top: 44px;
+  width: 350px;
+  right: 0;
+  z-index: 9999999;
+}
+.notification-dropdown-container:before {
+    content: '';
+    display: block;
+    position: absolute;
+    width: 0;
+    height: 0;
+    color: #eee;
+    border: 10px solid black;
+    border-color: transparent transparent #006fdb;
+    margin-top: -20px;
+}
+.notification-panel:before{
+  margin-left: 323px;
+}
+.message-panel:before{
+  margin-left: 284px;
+}
+.wishlist-panel:before{
+  margin-left: 245px;
+}
+.notification-dropdown-header{
+  border-bottom:1px solid #e5e5e5;
+  padding: 10px;
+  font-weight: bold;
+  font-size: 11px;
+}
+.notification-dropdown-footer{
+  padding: 10px;
+  text-align: center;
+  background: #eee;
+  font-size: 11px;
+  font-weight: bold;
+  border-top:1px solid #e5e5e5;
+}
+.notification-dropdown-content{
+  padding: 10px;
+  cursor: pointer;
+  border-bottom: 1px solid #e5e5e5;
+}
+.notification-dropdown-content:hover{
+  background: #f9f9f9;
+}
+.notification-content-img{
+  float: left;
+  margin-right: 10px;
+}
+.notification-content-img img{
+  width: 50px;
+  height: 50px;
+  border: none;
+}
+.notification-content-date{
+  font-size: 11px;
+  color: #999;
+}
+.notification-content-text{
+  color:#333;
+  font-size: 12px;
+}
+.notification-unread{
+  background-color: #edf0f4;
+}
+.notification-dropdown-container{
+  display: none;
+}
+.sign-up-page-input i{
+  font-size: 12px;
+}
+.comfirm-page{
+  font-size: 26px;
 }
