--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -1,12 +1,24 @@
-<h2>Resend confirmation instructions</h2>
+<div class="main">
+
+	<div class="container">
+
+		<div class="login-page">
+
+			<div class="login-page-title comfirm-page">Баталгаажуулах имэйл дахин илгээх</div>
 
 <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
   <%= devise_error_messages! %>
 
-  <div><%= f.label :email %><br />
+  <div class="login-page-input"><%= f.label :email %><br />
   <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Resend confirmation instructions" %></div>
+  <div class="login-page-button"><%= f.submit "Илгээх" %></div>
 <% end %>
 
 <%= render "devise/shared/links" %>
+
+		</div>
+
+	</div>
+
+</div>
