--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,29 +1,38 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="main">
 
-<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-  <%= devise_error_messages! %>
+  <div class="container">
 
-  <div><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+    <div class="sign-up-page">
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
 
-  <div><%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-  <%= f.password_field :password, :autocomplete => "off" %></div>
+      <div class="sign-up-page-title">Нэвтрэх мэдээллээ өөрчлөх</div>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
+          <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+            <%= devise_error_messages! %>
 
-  <div><%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-  <%= f.password_field :current_password %></div>
+            <div  class="sign-up-page-input"><%= f.label :email %><br />
+            <%= f.email_field :email, :autofocus => true %></div>
 
-  <div><%= f.submit "Update" %></div>
-<% end %>
+            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+              <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+            <% end %>
 
-<h3>Cancel my account</h3>
+            <div  class="sign-up-page-input"><%= f.label :password %> <i>(Нууц үгээ солихыг хүсэхгүй бол хоосон орхино уу.)</i><br />
+            <%= f.password_field :password, :autocomplete => "off" %></div>
 
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), :data => { :confirm => "Are you sure?" }, :method => :delete %></p>
+            <div  class="sign-up-page-input"><%= f.label :password_confirmation %><br />
+            <%= f.password_field :password_confirmation %></div>
 
-<%= link_to "Back", :back %>
+            <div  class="sign-up-page-input"><%= f.label :current_password %> <i>(Одоогийн нууц үгээ оруулна уу.)</i><br />
+            <%= f.password_field :current_password %></div>
+
+            <div  class="sign-up-page-button"><%= f.submit "Хадгалах" %></div>
+          <% end %>
+
+
+
+    </div>
+
+  </div>
+
+</div>
