--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -815,6 +815,10 @@ body{
     font-size: 11px !important;
   }
 
+  .timeline-deal-item-bottom-buttons .wish-list {
+    font-size: 16px !important;
+  }
+
   .timeline-deal-item-bottom-buttons a.btn {
     float: right;
     margin-left: 10px;
@@ -1431,22 +1435,6 @@ background: image-url('arrow_right.png') no-repeat 0 0;
 .modal-dialog{
   margin-top: 80px;
 }
-.profile-img-change{
-    cursor: pointer;
-    height: 35px;
-    width: 133px;
-    background: image-url('change-profile-img.png') #eee no-repeat center center;
-    margin-bottom: 10px;
-    margin-left: calc(50% - 66px);
-  }
-  .profile-img-change input{
-    cursor: pointer;
-    display: block !important;
-    width: 133px !important;
-    height: 35px !important;
-    opacity: 0 !important;
-    overflow: hidden !important;
-  }
 
 .no-item-here{
   background: #fff;
@@ -1779,31 +1767,31 @@ background: image-url('arrow_right.png') no-repeat 0 0;
   height: 34px;
   width: 34px;
 }
-.wish-listed{
-  font-size: 11px !important;
+.wish-list{
+  font-size: 14px;
   color: #333;
   background-color: #fff;
   border: #ccc 1px solid;
-  display: inline-block;
-  padding: 6px 12px;
-  margin-bottom: 0;
-  font-weight: 400;
-  line-height: 1.42857143;
+  padding: 4px 3px 0px 3px;
   text-align: center;
-  white-space: nowrap;
-  vertical-align: middle;
-  -ms-touch-action: manipulation;
-  touch-action: manipulation;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none;
-  background-image: none;
   border-radius: 4px;
+  cursor: pointer;
+  width: 30px;
+  float: left;
+}
+
+.wish-list:hover{
+  color: #0081ff;
+}
+
+.wish-list.wish-listed{
+  color: #fff;
+  background-color: #0081ff;
+  border-color: #0081ff;
   cursor: default;
 }
-.full-detail-deal-buttons .wish-listed{
-  font-size: 14px !important;
+
+.full-detail-deal-buttons .wish-list{
   margin-top: 10px;
 }
 .full-detail-image-loader{
@@ -1995,4 +1983,47 @@ a.anchor {
 }
 .comfirm-page{
   font-size: 26px;
+}
+
+.profile-img-change{
+    border: 0px solid rgba(0, 0, 0, .5);
+    cursor: pointer;
+    height: 230px;
+    width: 230px;
+    z-index: 99;
+    position: absolute;
+    margin: 20px 24px;
+    border-radius: 50%;
+    transition-duration: 0.3s;
+    text-align: center;
+}
+.profile-img-change:hover{
+    border: 20px solid rgba(0, 0, 0, .5);
+    transition-duration: 0.3s;
+  }
+.profile-img-change input{
+    cursor: pointer;
+    display: block !important;
+    width: 230px !important;
+    height: 230px !important;
+    opacity: 0 !important;
+    overflow: hidden !important;
+    position: absolute;
+    top: 0;
+}
+.profile-img-change-title{
+  margin: 0 auto;
+  margin-top: 120px;
+  opacity: 0;
+  transition-duration: 0.3s;
+  color: #fff;
+  background: rgba(0, 0, 0, .7);
+  width: 120px;
+  padding: 10px;
+  border-radius: 5px;
+}
+.profile-img-change:hover .profile-img-change-title{
+  margin-top: 150px !important;
+  opacity: 1;
+  transition-duration: 0.3s;
 }
