--- a/app/views/home/page11.html.erb
+++ b/app/views/home/page11.html.erb
@@ -10,16 +10,17 @@
 
             <div class="profile-left">
 
+                <div class="profile-img-change">
+                    <div class="profile-img-change-title">Зураг солих</div>
+                    <input type="file" />
+                </div>
+
                 <div class="profile-img portrait">
 
-                    <%= image_tag('ad-chat.jpg')%>
+                    <%= image_tag('avatar.jpg')%>
 
                 </div>
                 <div class="col-md-12">
-
-                    <div class="profile-img-change">
-                        <input type="file" />
-                    </div>
 
                     <div class="form-group">
                         <label for="exampleInputName2">Овог</label>
