--- a/app/views/home/page10.html.erb
+++ b/app/views/home/page10.html.erb
@@ -7,9 +7,55 @@
 	    	<div class="deal-full-detail-page">
 
 	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
-	                <div class="btn btn-primary bid-accept-button"><span class="glyphicon glyphicon-ok" style="margin-right:3px;"></span> Зөвшөөрөх</div>
 	    			<h5>Санал ирсэн тохиролцоо.</h5>
 	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    		</div>
+
+	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+	                <h5>Та доорхи тохиролцоонд энэхүү саналыг илгээсэн байна.</h5>
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    		</div>
+
+	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+	                <h5>Таны доорхи тохиролцоонд илгээсэн энэхүү саналыг хүлээн авсан байна.</h5>
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    			<address>
+					  <strong>Холбоо барих</strong><br>
+					  Утас: 9911 9911, 9911 1199<br>
+					  Имэйл хаяг: mail@mail.com<br>
+					</address>
+
+	    		</div>
+
+
+
+
+	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+	                <div class="btn btn-primary bid-accept-button"><span class="glyphicon glyphicon-ok" style="margin-right:3px;"></span> Зөвшөөрөх</div>
+	    			<h5>Таны доорхи тохиролцоонд энэхүү саналыг илгээсэн байна.</h5>
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    		</div>
+	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+	                <div class="btn btn-danger bid-accept-button">Тохиролцоог хаах</div>
+	    			<h5>Та энэхүү саналыг хүлээн авлаа.</h5>
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+
+	    			<address>
+					  <strong>Холбоо барих:</strong><br>
+					  Утас: 9911 9911, 9911 1199<br>
+					  Имэйл хаяг: mail@mail.com<br>
+					</address>
+
+	    		</div>
+	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+	                <div class="btn btn-danger bid-accept-button">Тохиролцоог хаах</div>
+	    			<h5>Таны доорхи тохиролцоонд ирсэн энэхүү саналыг хүлээн авсан байна.</h5>
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    			<address>
+					  <strong>Холбоо барих:</strong><br>
+					  Утас: 9911 9911, 9911 1199<br>
+					  Имэйл хаяг: mail@mail.com<br>
+					</address>
 	    		</div>
 
 		        <div class="full-detail-images">
