--- a/app/views/home/page12.html.erb
+++ b/app/views/home/page12.html.erb
@@ -243,22 +243,47 @@
 
                 </div>  
 
-                <div class="chat-adv">
+                <div class="chat-right">
+
+                  <div class="full-detail-user-information">
+                    <div class="full-detail-user-info-short">
+                      <div class="full-detail-user-info-img"><%= image_tag('avatar.png')%></div>
+                      <div class="full-detail-user-info-name"><a href="#">Бадар-Ууган Чагнаадорж</a></div>
+                      <div class="full-detail-user-info-rate">
+                        <%= image_tag('rank-mid.png')%>
+                        <div class="full-detail-user-info-raters">Үнэлсэн: 5</div>
+                      </div>
+                      <div class="clearfix"></div>
+                      <div class="hairly-line"></div>
+                      <div class="full-detail-user-info-deals">
+                        <div class="full-detail-user-info-deals-reg"><span class="glyphicon glyphicon-calendar"></span> Бүртгүүлсэн: 2015.12.1</div>
+                        <div class="full-detail-user-info-deals-all-deal"><span class="glyphicon glyphicon-tags"></span> Нийт оруулсан тохиролцоо: 15</div>
+                        <div class="full-detail-user-info-deals-done-deal"><span class="glyphicon glyphicon-tag"></span> Хийгдсэн тохиролцоо: 15</div>
+                        <div class="full-detail-user-info-deals-active-deal"><span class="glyphicon glyphicon-th-list"></span> Идэвхтэй тохиролцоо: 15</div>
+                      </div>
+                    </div>
+                    <div class="clearfix"></div>
+                  </div>
 
                   <%= image_tag('ad-chat.jpg')%>
 
+
+
                 </div> 
 
-                <div class="clearfix"></div>
+
+
+                
 
                 <div class="message-send-input">
 
                   <textarea class="form-control" rows="3"></textarea>
 
-                  <button type="submit" class="btn btn-primary">Илгээх</button>
+                  <button type="submit" class="btn btn-primary pull-right">Илгээх</button>
 
                 </div>         
 
+                <div class="clearfix"></div>
 
 
             </div>
