--- a/app/views/home/page3.html.erb
+++ b/app/views/home/page3.html.erb
@@ -18,6 +18,66 @@
 
     	<div class="deal-full-detail-page-container">
 	    	<div class="deal-full-detail-page">
+
+	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+	    			<h5>Та доорхи саналыг энэхүү тохиролцоонд илгээсэн байна.</h5>
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    		</div>
+
+	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+	                <h5>Таны энэхүү тохиролцоонд илгээсэн доорхи саналыг хүлээн авсан байна.</h5>
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    			<address>
+					  <strong>Холбоо барих</strong><br>
+					  Утас: 9911 9911, 9911 1199<br>
+					  Имэйл хаяг: mail@mail.com<br>
+					</address>
+	    		</div>
+
+	    		<div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+	    			<div class="btn btn-danger bid-accept-button">Тохиролцоог хаах</div>
+	                <h5>Та доорхи саналуудыг зөвшөөрсөн байна.</h5>
+
+	                <div class="pull-left bs-callout-info-address">
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    			<address>
+					  <strong>Холбоо барих</strong><br>
+					  Утас: 9911 9911, 9911 1199<br>
+					  Имэйл хаяг: mail@mail.com<br>
+					</address>
+					</div>
+					<div class="pull-left bs-callout-info-address">
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    			<address>
+					  <strong>Холбоо барих</strong><br>
+					  Утас: 9911 9911, 9911 1199<br>
+					  Имэйл хаяг: mail@mail.com<br>
+					</address>
+					</div>
+					<div class="pull-left bs-callout-info-address">
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    			<address>
+					  <strong>Холбоо барих</strong><br>
+					  Утас: 9911 9911, 9911 1199<br>
+					  Имэйл хаяг: mail@mail.com<br>
+					</address>
+					</div>
+					<div class="pull-left bs-callout-info-address">
+	    			<p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+	    			<address>
+					  <strong>Холбоо барих</strong><br>
+					  Утас: 9911 9911, 9911 1199<br>
+					  Имэйл хаяг: mail@mail.com<br>
+					</address>
+					</div>
+
+					<div class="clearfix"></div>
+
+	    		</div>
+
+	    		
+
+
 		        <div class="full-detail-images">
 		          <div class="full-detail-image-slide">
 		          	<div class="full-detail-image-loader"></div>
