--- a/app/views/home/page6.html.erb
+++ b/app/views/home/page6.html.erb
@@ -102,64 +102,64 @@
 
                     <table class="table">
                       <tr class="unread-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                       <tr class="unread-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                       <tr class="read-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                       <tr class="read-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                       <tr class="read-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                       <tr class="read-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                       <tr class="read-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td ><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                       <tr class="read-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                       <tr class="read-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                       <tr class="read-message">
-                        <td style="width:30px;"><label><input type="checkbox"></label></td>
-                        <td style="width:150px;" class="profile-message-user-name">Баатар Болд</td>
+                        <td><label><input type="checkbox"></label></td>
+                        <td class="profile-message-user-name">Баатар Болд</td>
                         <td><span class="message-title">Гарчиг</span> <span class="message-intro">- Товч агуулга</span></td>
-                        <td style="width:80px;">2015.12.31</td>
+                        <td>2015.12.31</td>
                       </tr>
                     </table>
 
