updates, header profile, ...

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -48,130 +48,8 @@
         
         <%= react_component("SearchBar", url: "/rest/categories.json?exclude_children=true") %>
         
-        <div class="header-profile">
+        <%= react_component("HeaderProfile", current_user_id: current_user.try(:id)) %>
 
-          <% if false %> 
-
-            <div class="header-login">
-            <div class="header-login-social-media">
-              <a href="#"><%= image_tag('fb-login.png')%></a>
-              <a href="#"><%= image_tag('tw-login.png')%></a>
-              <a href="#"><%= image_tag('gp-login.png')%></a>
-            </div>
-            <div class="header-profile-info">   
-                  <a href="/users/sign_in"><div class="btn btn-default">Нэвтрэх</div></a>
-            </div>
-            </div>
-        
-          <% end %>
-
-        <div class="header-profile-logged">
-          <div class="header-profile-notifications">
-            <a href="#"><div class="header-notification"><span class="glyphicon glyphicon-ok-circle"></span></div></a>
-            <a href="#"><div class="header-notification"><span class="glyphicon glyphicon-envelope"></span></div></a>
-            <a href="#">
-              <div class="header-notification notification-active">
-                <div class="header-notification-number">5</div>
-                <span class="glyphicon glyphicon-list"></span>
-              </div>
-            </a>
-            <div class="notification-dropdown-container notification-panel">
-              
-                <div class="notification-dropdown-header">Сонордуулга</div>
-
-                <div class="notification-dropdown-content notification-unread">
-
-                  <div class="notification-content-img"><%= image_tag('avatar.jpg')%></div>
-                  <div class="notification-content-text">
-
-                    <strong>Хүүкү Батка</strong> таньд илгээсэн <strong>Iphone 6 FU SpaceGray</strong> саналаа устгасан байна.
-
-                  </div>
-
-                  <div class="notification-content-date">2 цагийн өмнө</div>
-
-                  <div class="clearfix"></div>
-
-                </div>
-                <div class="notification-dropdown-content">
-
-                  <div class="notification-content-img"><%= image_tag('avatar.jpg')%></div>
-                  <div class="notification-content-text">
-
-                    <strong>Хүүкү Батка</strong><br/> Хайртай шүү чамдаа
-
-                  </div>
-
-                  <div class="notification-content-date">2 цагийн өмнө</div>
-
-                  <div class="clearfix"></div>
-
-                </div>
-                <div class="notification-dropdown-content notification-unread">
-
-                  <div class="notification-content-img"><%= image_tag('avatar.jpg')%></div>
-                  <div class="notification-content-text">
-
-                    <strong>Хүүкү Батка</strong> таньд илгээсэн <strong>Iphone 6 FU SpaceGray</strong> саналаа устгасан байна.
-
-                  </div>
-
-                  <div class="notification-content-date">2 цагийн өмнө</div>
-
-                  <div class="clearfix"></div>
-
-                </div>
-                <div class="notification-dropdown-content">
-
-                  <div class="notification-content-img"><%= image_tag('avatar.jpg')%></div>
-                  <div class="notification-content-text">
-
-                    <strong>Хүүкү Батка</strong> таньд илгээсэн <strong>Iphone 6 FU SpaceGray</strong> саналаа устгасан байна.
-
-                  </div>
-
-                  <div class="notification-content-date">2 цагийн өмнө</div>
-
-                  <div class="clearfix"></div>
-
-                </div>
-                <div class="notification-dropdown-content">
-
-                  <div class="notification-content-img"><%= image_tag('avatar.jpg')%></div>
-                  <div class="notification-content-text">
-
-                    <strong>Хүүкү Батка</strong> таньд илгээсэн <strong>Iphone 6 FU SpaceGray</strong> саналаа устгасан байна.
-
-                  </div>
-
-                  <div class="notification-content-date">2 цагийн өмнө</div>
-
-                  <div class="clearfix"></div>
-
-                </div>
-
-                <div class="notification-dropdown-footer"><a href="#">Бүгдийг харах</a></div>
-              
-            </div>
-          </div>
-          <div class="header-profile-info">   
-                <div class="dropdown">
-                  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-                    Batka Xvvkv
-                    <span class="caret"></span>
-                  </button>
-                  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-                    <li><a href="#">Action</a></li>
-                    <li><a href="#">Another action</a></li>
-                    <li><a href="#">Something else here</a></li>
-                    <li role="separator" class="divider"></li>
-                    <li><a href="#">Separated link</a></li>
-                  </ul>
-                </div>
-          </div>
-        </div>
-
-        </div>
       </div>    
     </div>
 
