--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1372,7 +1372,7 @@ background: image-url('arrow_right.png') no-repeat 0 0;
     border-left-color: #337ab7;
     position: relative;
 }
-.bid-accept-button{
+.header-info-button{
   position: absolute;
   right: 10px;
   top:10px;
@@ -1789,6 +1789,9 @@ background: image-url('arrow_right.png') no-repeat 0 0;
   height: 34px;
   width: 34px;
 }
+.header-login-social-media a{
+  margin-right: 5px;
+}
 .wish-list{
   font-size: 14px;
   color: #ccc;
@@ -1892,6 +1895,7 @@ a.anchor {
   text-align: center;
   vertical-align: middle;
   position: relative;
+  cursor: pointer;
 }
 .header-notification:hover{
   background: #ddd;
@@ -2002,9 +2006,6 @@ a.anchor {
 .notification-unread{
   background-color: #edf0f4;
 }
-.notification-dropdown-container{
-  display: none;
-}
 .sign-up-page-input i{
   font-size: 12px;
 }
@@ -2104,4 +2105,7 @@ address strong{
 .message-intro{
   color:#999;
   font-size: 13px;
+}
+.add-deal-page button{
+  margin: 0 5px;
 }
