--- a/app/views/home/page4.html.erb
+++ b/app/views/home/page4.html.erb
@@ -11,8 +11,15 @@
 
         <div class="add-deal-page">
 
+            <div class="bs-callout bs-callout-info" id="callout-helper-context-color-specificity">
+                    <h5>Таны санал илгээх гэж буй тохиролцоо.</h5>
+                    <p><strong><a href="#">Iphone5s 32GB FU SpaceGray</a></strong></strong></p>
+                </div>
+
 
             <div class="home-module-title big-title">Санал илгээх</div>
+
+                
 
                 <div class="form-group col-md-12">
                     <label>Гарчиг <a href="#">[?]</a></label>
