--- a/app/views/home/page13.html.erb
+++ b/app/views/home/page13.html.erb
@@ -75,6 +75,8 @@
 
                 <div class="home-module-title big-title">Сонордуулга</div>
 
+                <div class="alert alert-info" role="alert">Сонордуулга байхгүй байна.</div>
+
 
                   <div class="profile-all-notification">
 
