--- a/app/views/devise/confirmations/new.html.erb
+++ b/app/views/devise/confirmations/new.html.erb
@@ -4,18 +4,24 @@
 
 		<div class="login-page">
 
-			<div class="login-page-title comfirm-page">Баталгаажуулах имэйл дахин илгээх</div>
+			<div class="login-page-title comfirm-page">Баталгаажуулах И-Мэйл дахин илгээх</div>
+      <% if resource.errors.full_messages.count > 0 %>
+        <div class="row">
+          <ul>
+            <%= raw resource.errors.full_messages.map { |msg| content_tag(:li, msg) }.join %>
+          </ul>
+        </div>
+      <% end %>
 
-<%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
-  <%= devise_error_messages! %>
+      <%= form_for(resource, :as => resource_name, :url => confirmation_path(resource_name), :html => { :method => :post }) do |f| %>
+        
+        <div class="login-page-input"><%= f.label :email %>
+        <%= f.email_field :email, :autofocus => true %></div>
 
-  <div class="login-page-input"><%= f.label :email %><br />
-  <%= f.email_field :email, :autofocus => true %></div>
+        <div class="login-page-button"><%= f.submit "Илгээх" %></div>
+      <% end %>
 
-  <div class="login-page-button"><%= f.submit "Илгээх" %></div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+      <%= render "devise/shared/links" %>
 
 		</div>
 
