--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -6,17 +6,24 @@
 		<div class="login-page">
 
 			<div class="login-page-title">Нууц үгээ мартсан</div>
+			<% if resource.errors.full_messages.count > 0 %>
+        <div class="row">
+          <ul>
+            <%= raw resource.errors.full_messages.map { |msg| content_tag(:li, msg) }.join %>
+          </ul>
+        </div>
+      <% end %>
 
-				<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
-				  
+			<%= form_for(resource, :as => resource_name, :url => password_path(resource_name), :html => { :method => :post }) do |f| %>
+			  
 
-				  <div><%= f.label :email %><br />
-				  <div class="login-page-input"><%= f.email_field :email, :autofocus => true %></div></div>
+			  <div><%= f.label :email %>
+			  <div class="login-page-input"><%= f.email_field :email, :autofocus => true %></div></div>
 
-				  <div class="login-page-button"><%= f.submit "Нууц үг илгээх" %></div>
-				<% end %>
+			  <div class="login-page-button"><%= f.submit "Нууц үг илгээх" %></div>
+			<% end %>
 
-				<div class="login-page-links"><%= render "devise/shared/links" %></div>
+			<div class="login-page-links"><%= render "devise/shared/links" %></div>
 
 
 		</div>
