--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -6,31 +6,35 @@
 
 
       <div class="sign-up-page-title">Нэвтрэх мэдээллээ өөрчлөх</div>
+      <% if resource.errors.full_messages.count > 0 %>
+        <div class="row">
+          <ul>
+            <%= raw resource.errors.full_messages.map { |msg| content_tag(:li, msg) }.join %>
+          </ul>
+        </div>
+      <% end %>
 
-          <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
-            <%= devise_error_messages! %>
+      <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :html => { :method => :put }) do |f| %>
+        <%= devise_error_messages! %>
 
-            <div  class="sign-up-page-input"><%= f.label :email %><br />
-            <%= f.email_field :email, :autofocus => true %></div>
+        <div  class="sign-up-page-input"><%= f.label :email %><br />
+        <%= f.email_field :email, :autofocus => true %></div>
 
-            <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-              <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-            <% end %>
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
+        <% end %>
 
-            <div  class="sign-up-page-input"><%= f.label :password %> <i>(Нууц үгээ солихыг хүсэхгүй бол хоосон орхино уу.)</i><br />
-            <%= f.password_field :password, :autocomplete => "off" %></div>
+        <div  class="sign-up-page-input"><%= f.label :password %> <i>(Нууц үгээ солихыг хүсэхгүй бол хоосон орхино уу.)</i><br />
+        <%= f.password_field :password, :autocomplete => "off" %></div>
 
-            <div  class="sign-up-page-input"><%= f.label :password_confirmation %><br />
-            <%= f.password_field :password_confirmation %></div>
+        <div  class="sign-up-page-input"><%= f.label :password_confirmation %><br />
+        <%= f.password_field :password_confirmation %></div>
 
-            <div  class="sign-up-page-input"><%= f.label :current_password %> <i>(Одоогийн нууц үгээ оруулна уу.)</i><br />
-            <%= f.password_field :current_password %></div>
+        <div  class="sign-up-page-input"><%= f.label :current_password %> <i>(Одоогийн нууц үгээ оруулна уу.)</i><br />
+        <%= f.password_field :current_password %></div>
 
-            <div  class="sign-up-page-button"><%= f.submit "Хадгалах" %></div>
-          <% end %>
-
-
-
+        <div  class="sign-up-page-button"><%= f.submit "Хадгалах" %></div>
+      <% end %>
     </div>
 
   </div>
