--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -6,9 +6,15 @@
 
 
       <div class="sign-up-page-title"><%= t('view.registration.register')%></div>
-
+      <% if resource.errors.full_messages.count > 0 %>
+        <div class="row">
+          <ul>
+            <%= raw resource.errors.full_messages.map { |msg| content_tag(:li, msg) }.join %>
+          </ul>
+        </div>
+      <% end %>
+        
       <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
-        <%= devise_error_messages! %>
 
         <div  class="sign-up-page-input"><%= f.label :email %><br />
         <%= f.email_field :email, :autofocus => true %></div>
