--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2233,20 +2233,33 @@ address strong{
   font-size: 18px;
   cursor: pointer;
 }
-.left-filter-price .form-group{
-  float: left;
-  width: 50%;
-  padding: 5px;
-  margin-bottom:0px;
+
+.left-filter-price a {
+  font-size: 12px;
+  font-weight: normal;
+  line-height: 22px;
 }
-.left-filter-price .form-group label{
-  font-size: 11px;
-}
-.left-filter-price .form-group input{
+
+.left-filter-price .price-range input{
   font-size: 11px;
   height: 25px;
   padding: 5px;
+  width: 30%;
+  float: left;
+  margin-bottom:0px;
 }
+
+.left-filter-price .price-range span{
+  float: left;
+  margin-bottom:0px;
+  padding: 3px 1px 0 5px;
+}
+
+.left-filter-price .price-range span.glyphicon{
+  padding: 5px;
+  cursor: pointer;
+}
+  
 .left-filter-price .checkbox{
   margin-top: 0px;
 }
@@ -2256,14 +2269,14 @@ address strong{
   margin-top: 5px;
 }
 .left-filter-price .checkbox input{
-  margin-top: 0px;
+  margin-top: 1px;
 }
 .title5{
   font-size: 16px;
   color:#d1d1d1;
   margin: 10px 0;
 }
-.left-filter-category .glyphicon{
+.left-filter-category .glyphicon, .left-filter-price .glyphicon{
   font-size: 11px;
 }
 .left-filter-closed .checkbox input{
