--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dealmn</title>
+    <title>Deal.MN</title>
     <script>window.I18n = <%= current_translations.to_json.html_safe %></script>
     
     <%= stylesheet_link_tag    "application", :media => "all" %>
