--- a/app/views/bids/new.html.erb
+++ b/app/views/bids/new.html.erb
@@ -1,1 +1,1 @@
-<%= react_component("BidEditorPage", listing_id: @listing.id, edit_mode: false) %>
+<%= react_component("BidEditorPage", listing_id: @listing.id, listing_name: @listing.title, edit_mode: false) %>
